# ProjectOctopus

./: README.md
Embedded/: README.md
Embedded/ESPtopus/: Adafruit_TCS34725.cpp  Adafruit_TCS34725.h  ColorSensor.cpp  ColorSensor.hpp  Communicator.cpp  Communicator.hpp  Driver.cpp  Driver.hpp  ESPtopus.ino  Map.cpp  Map.hpp  Motors.cpp  Motors.hpp  OpticalFlow.cpp  OpticalFlow.hpp  PathPlanner.cpp  PathPlanner.hpp  StaticQueue.hpp
Server/: .gitignore  CMakeLists.txt  README.md  config.ini  needed_libs.txt
Server/python_mock/: graphics.py  mock.py
Server/src/: SLAMmer.cpp  SLAMmer.hpp  main.cpp  server.cpp  server.hpp
Visualizer/: Makefile
Visualizer/src/: .main.cpp.swp  CloudServer.cpp  CloudServer.hpp  StripWindow.cpp  StripWindow.hpp  main.cpp
